FIX: indentations and comments

--- a/html/mobile-menu.html
+++ b/html/mobile-menu.html
@@ -1,5 +1,5 @@
 <!-- MOBILE MENU -->
-<div id="$1-mobile-menu" class="mobile-menu">
+<div id="mobile-menu" class="mobile-menu">
     <div class="mobile-menu-container">
         <div class="mobile-menu-header">
             <span class="mobile-menu-heading">Menu</span>
