--- a/html/multiple-files-upload-form.html
+++ b/html/multiple-files-upload-form.html
@@ -1,5 +1,5 @@
 <!-- FORM: multiple file input -->
 <form method="post" action="upload.php" enctype="multipart/form-data">
-    <input name='uploads[]' type="file" multiple>
+    <input name='uploads[]' type="file" multiple="multiple">
     <input type="submit" value="Send">
 </form>
