--- a/html/screen-overlay.html
+++ b/html/screen-overlay.html
@@ -1,5 +1,5 @@
 <!-- SCREEN OVERLAY -->
-<div id="$1-screen-overlay" class="screen-overlay">
+<div id="screen-overlay" class="screen-overlay">
     <div class="overlay-container">
         <div class="overlay-close"><span class="overlay-close-icon"></span></div>
         <div class="overlay-preloader"></div>
